--- a/module_main/src/main/res/values/strings.xml
+++ b/module_main/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ModuleMain</string>
+    <string name="home">首页</string>
+    <string name="catagory">分类</string>
+    <string name="cart">购物车</string>
+    <string name="mine">我的</string>
 </resources>
